--- a/Chess-UWP/App.xaml
+++ b/Chess-UWP/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application
+﻿<cm:CaliburnApplication 
     x:Class="Chess_UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Chess_UWP">
+    xmlns:cm="using:Caliburn.Micro">
 
-</Application>
+</cm:CaliburnApplication>
