Fixed figure selection.

--- a/Chess-UWP/Views/BoardView.xaml
+++ b/Chess-UWP/Views/BoardView.xaml
@@ -55,7 +55,7 @@
                    Width="200"
                    TextWrapping="Wrap"/>
 
-        <!--<Grid x:Name="PawnPromotionGrid"
+        <Grid x:Name="PawnPromotionGrid"
               Visibility="{Binding IsPawnPromotion}">
             <Grid.Background>
                 <SolidColorBrush Color="Gray" Opacity="0.5"/>
@@ -77,6 +77,6 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
-        </Grid>-->
+        </Grid>
     </Grid>
 </Page>
