--- a/Chess-UWP/Controls/PossiblePosition.xaml
+++ b/Chess-UWP/Controls/PossiblePosition.xaml
@@ -19,7 +19,8 @@
                  Opacity="0.6"
                  Width="50" Height="50"
                  Fill="DarkGray"
-                 IsHitTestVisible="False"  RenderTransformOrigin="0.5,0.5"
+                 IsHitTestVisible="False"
+                 RenderTransformOrigin="0.5,0.5"
                  Margin="{Binding Position, Converter={StaticResource PositionToMarginConverter}}">
 
             <Ellipse.RenderTransform>
